working numbers, ui

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="zero-row" class="num-row">
           <button id="btn-0" class="num-btn">0</button>
           <button id="eql-btn" class="operator-btn">=</button>
-          <button id="clear-btn" class="operator-btn">C</button>
+          <button id="clear-btn">C</button>
         </div>
       </div>
       <div id="operator-container">
